adapter适配器条目点击事件的封装，请求接口不同数据类型的封装

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,8 @@ dependencies {
 
     //implementation 'com.github.2coffees1team:GlideToVectorYou:v1.2.0'
 
+    //probuffer
+    implementation 'com.google.protobuf:protobuf-java:3.4.0'
+
 
 }
