--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".TestDataActivity"/>
     </application>
 
 </manifest>
